fix: array filter types

--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/array-filter-container/array-filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/array-filter-container/array-filter-container.component.less
@@ -15,6 +15,7 @@ div.array-filter-wrapper {
 			display: none;
 		}
 		label {
+			cursor: pointer;
 			background: transparent;
 			border: 1px solid white;
 			border-radius: 20px;
