feat: filters search

--- a/src/app/@ansyn/ansyn/modules/core/components/manual-removed-overlays/manual-removed-overlays.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/manual-removed-overlays/manual-removed-overlays.component.less
@@ -5,6 +5,8 @@ div.removed-show-hide {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	position: absolute;
+	bottom: 0;
 }
 
 .removed-show-hide > .reset-list {
