fix rotation bug and sync position

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -69,7 +69,7 @@
 				 "flags": {},
 				 "worldView": {
 				   "mapType": "openLayersMap",
-				   "sourceType": "BING"
+				   "sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}"
 				 },
 				 "id": "af3b94d2-03ff-44e6-9f73-10d386aff493"
 			   }
