--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
@@ -4,14 +4,32 @@
 		Show only favorites
 	</ansyn-slider-checkbox>
 
+	<ansyn-input
+		[ngModel]="filtersSearch"
+		(ngModelChange)="setFiltersSearch($event)"
+		[white]="true"
+		name="search"
+		id="ansyn-task-name"
+		class="margin"
+		label="Search">
+	</ansyn-input>
+
 	<div class="allFilters">
-		<ansyn-filter-container
-			*ngFor="let filter of filters"
-			[filter]="filter">
-		</ansyn-filter-container>
+		<ng-container *ngIf="filters?.length; else noFiltersFound">
+			<ansyn-filter-container
+				*ngFor="let filter of filters"
+				[filter]="filter">
+			</ansyn-filter-container>
+		</ng-container>
 
-		<ansyn-manual-removed-overlays>
-		</ansyn-manual-removed-overlays>
-
+		<ng-template #noFiltersFound>
+			<p class="noFiltersFound">
+				Couldn't find any results.
+			</p>
+		</ng-template>
 	</div>
+
+	<ansyn-manual-removed-overlays>
+	</ansyn-manual-removed-overlays>
+
 </div>
