add function to get overlay

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -22,3 +22,5 @@
 <button (click)="setMiscOverlays()">set Misc Overlays</button>
 
 <button (click)="setAnnotationsWithIcons()"> Set Annotations with icons</button>
+
+<button (click)="getOverlayData()">Get overlay data</button>
