--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
@@ -1,4 +1,4 @@
-<div *ngIf=long>
-	{{ long }}&deg; {{lat}}&deg; {{height}}m
+<div *ngIf='long && isVisible'>
+	{{ long }}&deg; {{lat}}&deg; <span *ngIf=height>{{height}}m</span> {{floatingPositionSuffix}}
 </div>
 
