--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.less
@@ -3,8 +3,8 @@
 :host {
 	position: absolute;
 	z-index: @z-index-map-rotation;
-	bottom: 100px;
-	left: 20px;
+	left: 15px;
+	font-size: smaller;
 	text-align: center;
 	user-select: none;
 }
