--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -47,14 +47,6 @@
 				border: solid 3px @application-main-color;
 			}
 		}
-		/deep/ .ol-mouse-position {
-			bottom: 0;
-			top: auto;
-			right: auto;
-			padding-left: 13px;
-			padding-bottom: 18px;
-			color: #cccccc;
-		}
 
 		/deep/ .ol-scale-line {
 			bottom: 0;
@@ -81,7 +73,7 @@
 		}
 
 		&.layout1 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+			/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 				bottom: @status-bar-height;
 			}
 
@@ -101,7 +93,7 @@
 		}
 
 		&.layout2 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+			/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 				bottom: @status-bar-height;
 			}
 
@@ -143,7 +135,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 
@@ -165,7 +157,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 
@@ -200,7 +192,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 
@@ -230,7 +222,7 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
 
