Add lat long cords (#2313)
* add MouseMoveEvent

* add mouse corrds component

* add ol position and sufix

* fix libs

* remove config

* cr and tests

* fix tests1

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -47,14 +47,7 @@
 				border: solid 3px @application-main-color;
 			}
 		}
-		/deep/ .ol-mouse-position {
-			bottom: 0;
-			top: auto;
-			right: auto;
-			padding-left: 13px;
-			padding-bottom: 18px;
-			color: #cccccc;
-		}
+
 		/deep/ .ol-scale-line {
 			bottom: 0;
 			height: 32px;
@@ -75,10 +68,19 @@
 			bottom: 0;
 		}
 
+		/deep/ ansyn-imagery-mouse-coordinates {
+			bottom: 55px - @status-bar-height;
+		}
+
 		&.layout1 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+			/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 				bottom: @status-bar-height;
 			}
+
+			/deep/ ansyn-imagery-mouse-coordinates {
+				bottom: 55px;
+			}
+
 			div.map-container-wrapper {
 				top: 0;
 				left: 0;
@@ -91,9 +93,14 @@
 		}
 
 		&.layout2 {
-			/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+			/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 				bottom: @status-bar-height;
 			}
+
+			/deep/ ansyn-imagery-mouse-coordinates {
+				bottom: 55px;
+			}
+
 			div.map-container-wrapper {
 				width: 50%;
 				height: 100%;
@@ -128,8 +135,12 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 55px;
 					}
 				}
 			}
@@ -146,8 +157,12 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 55px;
 					}
 				}
 				&:nth-child(1) {
@@ -177,8 +192,12 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 55px;
 					}
 				}
 				&:nth-child(1) {
@@ -203,8 +222,12 @@
 					div.active-border {
 						height: @height-minus-status;
 					}
-					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
+					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 55px;
 					}
 				}
 				&:nth-child(1) {
