add hebrew translate

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -326,7 +326,52 @@
 		 	"geoRegistered": "Geo Registered",
 		 	"notGeoRegistered": "Not Geo Registered",
 			"poorGeoRegistered": "Poor Geo Registered"
-	   	}
+	   	},
+	   	"component": {
+		  "Pin": "הצמד",
+		  "Unpin": "בטל הצמדה",
+		  "Filters": "סינון",
+		  "Tools": "כלים",
+		  "Data Layers": "שכבות מידע",
+		  "Default": "ברירת מחדל",
+		  "Annotation Layers": "שכבות אנטוציות",
+		  "Show all": "הצג הכל",
+		  "only": "הצג בלבד",
+		  "Import layer": "ייבא שכבה",
+		  "Create new layer": "צור שכבה חדשה",
+		  "Shadow mouse cursor": "",
+		  "Go To": "עבור אל",
+		  "Automatic Processing - Grayscale Images Only": "תיקון אוטמטי - תמונות גוון אפור בלבד",
+		  "Manual Image Enhancement": "תיקון תמונות ידני",
+		  "Display Overlays": "הצג שכבות",
+		  "Annotations": "אנטוציות",
+		  "Measure Distance": "מדוד מרחק",
+		  "reset": "אפס",
+		  "Reset all": "אפס הכל",
+		  "Sharpness": "חדות",
+		  "Contrast": "ניגודיות",
+		  "Brightness": "בהירות",
+		  "Gamma": "גמא",
+		  "Saturation": "רוויה",
+		  "Go": "עבור למיקום",
+		  "Pin location": "נעץ סיכה",
+		  "Heat Map": "מפת חום",
+		  "Overlays Footprint": "הצג עקבות",
+		  "Point": "נקודה",
+		  "LineString": "קו",
+		  "Polygon": "מצולע",
+		  "Circle": "עיגול",
+		  "Rectangle": "ריבוע",
+		  "Arrow": "חץ",
+		  "Width": "עובי",
+		  "Color": "צבע",
+		  "Fill": "מילוי",
+		  "Stroke": "גבול",
+		  "Measures": "מדוד",
+		  "Label": "תווית",
+		  "Delete": "מחק",
+		  "Show only favorites": "הצג רק מעודפים"
+		}
     },
 	 "httpTimeout": "3000",
 	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }}
