--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -12,7 +12,7 @@
 
 		<span class="only-filter"
 			  [hidden]="enumMetadata.value.disabled"
-			  (click)="selectOnly(enumMetadata.key)">only</span>
+			  (click)="selectOnly(enumMetadata.key)">{{'only' | translate}}</span>
 
 	</div>
 
