--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/overlays-display-mode/overlays-display-mode.component.html
@@ -17,7 +17,7 @@
 			   value="Heatmap"
 			   [disabled]="disabled"/>
 
-		<label [for]="radioIds.switchHeatMap" tooltip-class="bottom" tooltip-value="Heat Map">
+		<label [for]="radioIds.switchHeatMap" tooltip-class="bottom" [attr.tooltip-value]="translate.get('Heat Map') | async">
 			<i class="icon-tools-heatmap"></i>
 		</label>
 
@@ -28,7 +28,7 @@
 			   value="Polygon"
 			   [disabled]="disabled"/>
 
-		<label [for]="radioIds.switchFootprint" tooltip-class="bottom" tooltip-value="Overlays Footprint">
+		<label [for]="radioIds.switchFootprint" tooltip-class="bottom" [attr.tooltip-value]="translate.get('Overlays Footprint') | async">
 			<i class="icon-tools-polygons"></i>
 		</label>
 
